--- a/rdfs-explorer/export_presets.cfg
+++ b/rdfs-explorer/export_presets.cfg
@@ -51,7 +51,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../build/Rdfs_explorer.html"
+export_path="../build/html/Rdfs_explorer.html"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
