--- a/rdfs-explorer/export_presets.cfg
+++ b/rdfs-explorer/export_presets.cfg
@@ -162,7 +162,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../build/Rdfs_explorer.zip"
+export_path="../build/Rdfs_explorer_mac.zip"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -182,7 +182,7 @@ application/icon=""
 application/icon_interpolation=4
 application/bundle_identifier="com.landandair.RdfsExplorer"
 application/signature=""
-application/app_category="Games"
+application/app_category="Utilities"
 application/short_version=""
 application/version=""
 application/copyright=""
